include_directories("${CMAKE_CURRENT_LIST_DIR}/CoinUtils")

add_library(clp
  Clp_C_Interface.cpp
  ClpCholeskyBase.cpp
  ClpCholeskyDense.cpp
  #ClpCholeskyMumps.cpp
  #ClpCholeskyUfl.cpp
  #ClpCholeskyWssmp.cpp
  #ClpCholeskyWssmpKKT.cpp
  ClpConfig.h
  ClpConstraint.cpp
  ClpConstraintLinear.cpp
  ClpConstraintQuadratic.cpp
  ClpDualRowDantzig.cpp
  ClpDualRowPivot.cpp
  ClpDualRowSteepest.cpp
  ClpDummyMatrix.cpp
  ClpDynamicExampleMatrix.cpp
  ClpDynamicMatrix.cpp
  ClpEventHandler.cpp
  ClpFactorization.cpp
  ClpGubDynamicMatrix.cpp
  ClpGubMatrix.cpp
  ClpHelperFunctions.cpp
  ClpInterior.cpp
  ClpLinearObjective.cpp
  ClpLsqr.cpp
  ClpMatrixBase.cpp
  ClpMessage.cpp
  ClpModel.cpp
  ClpNetworkBasis.cpp
  ClpNetworkMatrix.cpp
  ClpNode.cpp
  ClpNonLinearCost.cpp
  ClpObjective.cpp
  ClpPackedMatrix.cpp
  ClpParameters.hpp
  ClpPdco.cpp
  ClpPdcoBase.cpp
  ClpPlusMinusOneMatrix.cpp
  ClpPredictorCorrector.cpp
  ClpPresolve.cpp
  ClpPrimalColumnDantzig.cpp
  ClpPrimalColumnPivot.cpp
  ClpPrimalColumnSteepest.cpp
  ClpQuadraticObjective.cpp
  ClpSimplex.cpp
  ClpSimplexDual.cpp
  ClpSimplexNonlinear.cpp
  ClpSimplexOther.cpp
  ClpSimplexPrimal.cpp
  ClpSolve.cpp
  Idiot.cpp
  IdiSolve.cpp
  CoinAlloc.cpp
  CoinBuild.cpp
  CoinDenseFactorization.cpp
  CoinDenseVector.cpp
  CoinError.cpp
  CoinFactorization1.cpp
  CoinFactorization2.cpp
  CoinFactorization3.cpp
  CoinFactorization4.cpp
  CoinFileIO.cpp
  CoinFinite.cpp
  CoinIndexedVector.cpp
  CoinLpIO.cpp
  CoinMessage.cpp
  CoinMessageHandler.cpp
  CoinModel.cpp
  CoinModelUseful.cpp
  CoinModelUseful2.cpp
  CoinMpsIO.cpp
  CoinOslFactorization.cpp
  CoinOslFactorization2.cpp
  CoinOslFactorization3.cpp
  CoinPackedMatrix.cpp
  CoinPackedVector.cpp
  CoinPackedVectorBase.cpp
  CoinParam.cpp
  CoinParamUtils.cpp
  CoinPostsolveMatrix.cpp
  CoinPrePostsolveMatrix.cpp
  CoinPrePostsolveMatrix.cpp
  CoinPresolveDoubleton.cpp
  CoinPresolveDual.cpp
  CoinPresolveDupcol.cpp
  CoinPresolveEmpty.cpp
  CoinPresolveFixed.cpp
  CoinPresolveForcing.cpp
  CoinPresolveHelperFunctions.cpp
  CoinPresolveImpliedFree.cpp
  CoinPresolveIsolated.cpp
  CoinPresolveMatrix.cpp
  CoinPresolvePsdebug.cpp
  CoinPresolveSingleton.cpp
  CoinPresolveSubst.cpp
  CoinPresolveTighten.cpp
  CoinPresolveTripleton.cpp
  CoinPresolveUseless.cpp
  CoinPresolveZeros.cpp
  CoinSearchTree.cpp
  CoinShallowPackedVector.cpp
  CoinSimpFactorization.cpp
  CoinSnapshot.cpp
  CoinStructuredModel.cpp
  CoinWarmStartBasis.cpp
  CoinWarmStartDual.cpp
  CoinWarmStartPrimalDual.cpp
  CoinWarmStartVector.cpp 
)

INSTALL(TARGETS clp ARCHIVE DESTINATION lib)